# logos-kv-module

./: CHANGELOG.md  CMakeLists.txt  README.md  flake.nix  metadata.json  module.yaml  result
.github/workflows/: ci.yml  release.yml
nix/: test.nix
scripts/: e2e-logoscore.sh
src/: i_kv_module.h  kv_interface.h  kv_plugin.cpp  kv_plugin.h  plugin.cpp
src/backends/: FileBackend.cpp  FileBackend.h  KvBackend.h  MemoryBackend.cpp  MemoryBackend.h  RocksDbBackend.cpp  RocksDbBackend.h  SqliteBackend.cpp  SqliteBackend.h
tests/: BackendConformanceTest.cpp  CMakeLists.txt  EncryptionTest.cpp
tests/encryption/: CMakeLists.txt
